Detach operation for stateful repositories